--- a/Anyaroth/Anyaroth/Anyaroth.vcxproj
+++ b/Anyaroth/Anyaroth/Anyaroth.vcxproj
@@ -282,6 +282,7 @@
     <ClCompile Include="Tilemap.cpp" />
     <ClCompile Include="TransformComponent.cpp" />
     <ClCompile Include="TTFclass.cpp" />
+    <ClCompile Include="TutorialBullsEye.cpp" />
     <ClCompile Include="UIElement.cpp" />
     <ClCompile Include="Vector2D.cpp" />
     <ClCompile Include="WaitingEvent.cpp" />
@@ -441,6 +442,7 @@
     <ClInclude Include="Tilemap.h" />
     <ClInclude Include="TransformComponent.h" />
     <ClInclude Include="TTFclass.h" />
+    <ClInclude Include="TutorialBullsEye.h" />
     <ClInclude Include="UIElement.h" />
     <ClInclude Include="Vector2D.h" />
     <ClInclude Include="WaitingEvent.h" />
