--- a/Anyaroth/Anyaroth/Anyaroth.vcxproj
+++ b/Anyaroth/Anyaroth/Anyaroth.vcxproj
@@ -283,7 +283,9 @@
     <ClCompile Include="TransformComponent.cpp" />
     <ClCompile Include="Trigger.cpp" />
     <ClCompile Include="TTFclass.cpp" />
+    <ClCompile Include="TutorialBuddy.cpp" />
     <ClCompile Include="TutorialBullsEye.cpp" />
+    <ClCompile Include="TutorialTurret.cpp" />
     <ClCompile Include="UIElement.cpp" />
     <ClCompile Include="Vector2D.cpp" />
     <ClCompile Include="WaitingEvent.cpp" />
@@ -444,7 +446,9 @@
     <ClInclude Include="TransformComponent.h" />
     <ClInclude Include="Trigger.h" />
     <ClInclude Include="TTFclass.h" />
+    <ClInclude Include="TutorialBuddy.h" />
     <ClInclude Include="TutorialBullsEye.h" />
+    <ClInclude Include="TutorialTurret.h" />
     <ClInclude Include="UIElement.h" />
     <ClInclude Include="Vector2D.h" />
     <ClInclude Include="WaitingEvent.h" />
