--- a/Anyaroth/Anyaroth/Anyaroth.vcxproj.filters
+++ b/Anyaroth/Anyaroth/Anyaroth.vcxproj.filters
@@ -487,6 +487,7 @@
     <ClCompile Include="Trigger.cpp">
       <Filter>Archivos de código fuente\Objects</Filter>
     </ClCompile>
+    <ClCompile Include="DialogueTrigger.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Game.h">
@@ -1011,6 +1012,7 @@
     <ClInclude Include="TutorialBuddy.h">
       <Filter>Archivos de encabezado\Objects\Enemies\GroundEnemies</Filter>
     </ClInclude>
+    <ClInclude Include="DialogueTrigger.h" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Archivos de código fuente">
