Inicio animaciones Angra soldier

--- a/Anyaroth/Anyaroth/Anyaroth.vcxproj
+++ b/Anyaroth/Anyaroth/Anyaroth.vcxproj
@@ -177,6 +177,7 @@
     <ClCompile Include="Laser.cpp" />
     <ClCompile Include="LaserContainer.cpp" />
     <ClCompile Include="LaserHandler.cpp" />
+    <ClCompile Include="OrbShotgun.cpp" />
     <ClCompile Include="PoleAxe.cpp" />
     <ClCompile Include="SpawnerBoss.cpp" />
     <ClCompile Include="Sword.cpp" />
@@ -334,6 +335,7 @@
     <ClInclude Include="Laser.h" />
     <ClInclude Include="LaserContainer.h" />
     <ClInclude Include="LaserHandler.h" />
+    <ClInclude Include="OrbShotgun.h" />
     <ClInclude Include="PoleAxe.h" />
     <ClInclude Include="SpawnerBoss.h" />
     <ClInclude Include="Sword.h" />
